# CMakeList.txt : CMake project for Assembler, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("Assembler")

# Add source to this project's executable.
add_executable (Assembler "Assembler.cpp" "Assembler.h")

# TODO: Add tests and install targets if needed.
